[gd_scene load_steps=4 format=2]

[ext_resource path="res://scripts/EnemyRoot.gd" type="Script" id=1]
[ext_resource path="res://sprites/enemy/enemy.png" type="Texture" id=2]

[sub_resource type="RectangleShape2D" id=1]

custom_solver_bias = 0.0
extents = Vector2( 16, 16 )

[node name="EnemyRoot" type="Node2D" index="0"]

script = ExtResource( 1 )

[node name="EnemySprite" type="Sprite" parent="." index="0"]

texture = ExtResource( 2 )

[node name="EnemyArea" type="Area2D" parent="." index="1"]

input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
audio_bus_override = false
audio_bus_name = "Master"
_sections_unfolded = [ "Transform" ]

[node name="EnemyShape" type="CollisionShape2D" parent="EnemyArea" index="0"]

shape = SubResource( 1 )
_sections_unfolded = [ "Transform" ]

[node name="EnemyAreaBelowLeft" type="Area2D" parent="." index="2"]

position = Vector2( -16, 0 )
scale = Vector2( 0.05, 1 )
input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
audio_bus_override = false
audio_bus_name = "Master"
_sections_unfolded = [ "Transform" ]

[node name="EnemyShape" type="CollisionShape2D" parent="EnemyAreaBelowLeft" index="0"]

position = Vector2( -16, 16 )
shape = SubResource( 1 )
_sections_unfolded = [ "Transform" ]

[node name="EnemyAreaBelowRight" type="Area2D" parent="." index="3"]

position = Vector2( 16, 0 )
scale = Vector2( 0.05, 1 )
input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
audio_bus_override = false
audio_bus_name = "Master"
_sections_unfolded = [ "Transform" ]

[node name="EnemyShape" type="CollisionShape2D" parent="EnemyAreaBelowRight" index="0"]

position = Vector2( 16, 16 )
shape = SubResource( 1 )
_sections_unfolded = [ "Transform" ]

[connection signal="area_entered" from="EnemyArea" to="." method="_on_EnymArea_area_entered"]

[connection signal="area_entered" from="EnemyAreaBelowLeft" to="." method="_on_EnemyAreaBelowLeft_area_entered"]

[connection signal="area_entered" from="EnemyAreaBelowRight" to="." method="_on_EnemyAreaBelowRight_area_entered"]


